log.txt
esterlis # Mon May  1 00:36:29 IDT 2017
KDArray.c: In function 'Init':
KDArray.c:120:9: error: unused variable 'j' [-Werror=unused-variable]
  int i, j;
         ^
KDArray.c: In function 'split':
KDArray.c:196:6: error: unused variable 'mid' [-Werror=unused-variable]
  int mid = RND_HALF(kdarr->size);
      ^
cc1: all warnings being treated as errors
make: *** [KDArray.o] Error 1
